[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mydborm"
version = "0.2.0"
description = "Lightweight ORM for MySQL and YugabyteDB"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["orm", "mysql", "yugabytedb", "database"]
authors = [
  { name = "Codengers", email = "info@codengers.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "mysql-connector-python>=8.0",
  "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
cli = ["typer>=0.9", "rich>=13.0"]
ui  = ["streamlit>=1.30"]
dev = [
  "pytest>=7",
  "pytest-cov",
  "ruff",
  "hatchling",
  "mysql-connector-python>=8.0",
  "psycopg2-binary>=2.9",
]

[project.scripts]
mydborm = "mydborm.cli:cli"

[project.urls]
Homepage   = "https://pypi.org/project/mydborm/"
Repository = "https://github.com/codengers/mydborm"

[tool.ruff]
line-length    = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --cov=mydborm --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]