[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mydborm"
version = "1.5.0"
description = "Lightweight ORM for MySQL and YugabyteDB"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["orm", "mysql", "yugabytedb", "database"]
authors = [
  { name = "Codengers", email = "info@codengers.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mysql-connector-python>=8.0",
  "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
cli = ["typer>=0.9", "rich>=13.0"]
ui  = ["streamlit>=1.30"]
async = ["aiomysql>=0.3", "aiopg>=1.4"]
dev   = [
  "pytest>=7",
  "pytest-cov",
  "pytest-asyncio>=0.23",
  "ruff",
  "hatchling",
  "mysql-connector-python>=8.0",
  "psycopg2-binary>=2.9",
  "aiomysql>=0.3",
  "aiopg>=1.4",
]
security = [
    "bcrypt>=4.0",
    "cryptography>=41.0",
]

[project.scripts]
mydborm = "mydborm.cli:cli"

[project.urls]
Homepage   = "https://pypi.org/project/mydborm/"
Repository = "https://github.com/codengers/mydborm"

[tool.ruff]
line-length    = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --cov=mydborm --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]
asyncio_mode = "auto"